[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Pad/Scripts/Pad.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pad/bat.png" type="Texture" id=2]
[ext_resource path="res://assets/resources/themes/theme_button.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/pad/calibrate.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/pad/left-arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/pad/right-arrow.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/pad/pause.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 0 )

[node name="Pad" type="Node2D"]
pause_mode = 2
physics_interpolation_mode = 2
script = ExtResource( 1 )

[node name="Bat" type="Sprite" parent="."]
position = Vector2( 608, 136 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Buttons" type="PanelContainer" parent="."]
margin_left = 256.0
margin_right = 706.0
margin_bottom = 256.0
rect_rotation = 90.0
custom_styles/panel = SubResource( 1 )

[node name="ButtonsControl" type="HBoxContainer" parent="Buttons"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Left" type="Button" parent="Buttons/ButtonsControl"]
modulate = Color( 0, 1, 1, 1 )
margin_right = 139.0
margin_bottom = 240.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Select" type="Button" parent="Buttons/ButtonsControl"]
modulate = Color( 0, 1, 1, 1 )
margin_left = 147.0
margin_right = 286.0
margin_bottom = 240.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
enabled_focus_mode = 0
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Right" type="Button" parent="Buttons/ButtonsControl"]
modulate = Color( 0, 1, 1, 1 )
margin_left = 294.0
margin_right = 434.0
margin_bottom = 240.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonsPlay" type="HBoxContainer" parent="Buttons"]
margin_left = 8.0
margin_top = 8.0
margin_right = 442.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Reset" type="Button" parent="Buttons/ButtonsPlay"]
modulate = Color( 0, 1, 1, 1 )
margin_right = 213.0
margin_bottom = 240.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[node name="Pause" type="Button" parent="Buttons/ButtonsPlay"]
modulate = Color( 0, 1, 1, 1 )
margin_left = 221.0
margin_right = 434.0
margin_bottom = 240.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Buttons/ButtonsControl/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Buttons/ButtonsControl/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="Buttons/ButtonsControl/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Buttons/ButtonsPlay/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Buttons/ButtonsPlay/Pause" to="." method="_on_Select_pressed"]
